--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 data-aos-delay="300"
                 data-aos-offset="0" data-aos-duration="3000" class="buttons">
                     <a href="#" class="btn-get-started">SEND E-MAİL</a>
-                    <a href="pages/aboutus.html" class="btn-signing-main">ABOUT US</a>
+                    <a href="/fuseweb/pages/aboutus.html" class="btn-signing-main">ABOUT US</a>
                 </div>
             </div>
 
