--- a/index.html
+++ b/index.html
@@ -4,73 +4,96 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FuseCom</title>
-    <link rel="stylesheet" href="/fuseweb/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <!---boxicons link--->
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+        <!---boxicons link--->
+    <link rel="stylesheet"
+  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+
     <!---remixicons link--->
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"/>
 </head>
 <body>
-    <img class="image-gradient" src="/fuseweb/public/img/f1wp1.png" alt="gradient">
+    <img class="image-gradient" src="public/img/f1wp1.png" alt="gradient">
     <div class="layer-blur"></div>
 
     <div class="container">
         <header>
             <a href="./">
-                <img data-aos="fade-down" data-aos-duration="1500" src="/fuseweb/public/img/logofusenew.png" alt="logo" class="logo">
+            <img data-aos="fade-down" data-aos-duration="1500" src="public/img/logofusenew.png" alt="logo" class="logo" >
             </a>
         </header>
 
         <main>
-            <div class="content">
-                <h1 data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0" data-aos-duration="1500">
-                    This is not<br>just an agency,<br>this is Fuse.
-                </h1>
-            </div>
+            
+                <div class="content">
+                <h1 data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="0" data-aos-duration="1500">This is not<br>just an agency,<br>this is Fuse.</h1>
+                </div>
 
-            <div class="content">
-                <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0" data-aos-duration="2000" class="tag-box">
+                <div class="content">
+                <div data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="0" data-aos-duration="2000" class="tag-box">
                     <div class="tag">LET'S FUSE</div>
                 </div>
 
-                <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0" data-aos-duration="2500" class="title1">
-                    <h4>We grow brands.<br>We create culture.</h4>
-                </div>
+                <div data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="0" data-aos-duration="2500"
+                class="title1"><h4>We grow brands.<br>We create culture.</h4></div>
 
-                <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0" data-aos-duration="3000" class="title2">
-                    <h5>Fuse</h5>
-                </div>
+                <div data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="0" data-aos-duration="3000"   
+                class="title2"><h5>Fuse</h5></div>
 
-                <p data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0" data-aos-duration="3000" class="description">
-                    Fuse is not just an agency. We're a creative culture playground. We grow brands by creating unique experiences, storytelling, and visual identities.
+                <p data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="0" data-aos-duration="3000" class="description">
+                    Fuse is not jus an agency. We're a creative culture playground. We grow brands vy creating unique experiences, storytelling, and visual identities.
                 </p>
 
-                <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0" data-aos-duration="3000" class="title3">
-                    <h5>Services</h5>
-                </div>
+                <div data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="0" data-aos-duration="3000"
+                class="title3"><h5>Services</h5></div>
 
-                <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0" data-aos-duration="3000" class="services">
-                    <h6>Branding<br>Visual Identity<br>Creative Directions<br>Digital Experiences</h6>
-                </div>
+                <div data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="0" data-aos-duration="3000"
+                class="services"><h6>Branding<br>Visual Identity<br>Creative Directions<br>Digital Experiences</h6></div>
 
-                <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0" data-aos-duration="3000" class="buttons">
+                <div data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="0" data-aos-duration="3000" class="buttons">
                     <a href="#" class="btn-get-started">SEND E-MAİL</a>
                     <a href="/fuseweb/pages/aboutus.html" class="btn-signing-main">ABOUT US</a>
                 </div>
             </div>
 
-            <footer>
-                <div class="footer-container">
-                    <div class="social-icons">
-                        <a href="https://www.instagram.com" target="_blank" class="icon instagram">Instagram</a>
-                        <a href="https://www.linkedin.com" target="_blank" class="icon linkedin">LinkedIn</a>
-                        <a href="https://www.twitter.com" target="_blank" class="icon x">X</a>
-                        <a href="https://www.tiktok.com" target="_blank" class="icon tiktok">TikTok</a>
-                    </div>
-                    <p>© 2025 Fuse – Tüm hakları saklıdır.</p>
+        <footer>
+            <div class="footer-container">
+                <div class="social-icons">
+                    <a href="https://www.instagram.com" target="_blank" class="icon instagram">Instagram</a>
+                    <a href="https://www.linkedin.com" target="_blank" class="icon linkedin">LinkedIn</a>
+                    <a href="https://www.twitter.com" target="_blank" class="icon x">X</a>
+                    <a href="https://www.tiktok.com" target="_blank" class="icon tiktok">TikTok</a>
                 </div>
-            </footer>
+                <p>© 2025 Fuse – Tüm hakları saklıdır.</p>
+            </div>
+        </footer>
 
         </main>
 
@@ -79,10 +102,16 @@
     </div>
 
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.56/build/spline-viewer.js"></script>
+
+
+
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
     AOS.init();
     </script>
+
     <script src="https://kit.fontawesome.com/your_kit_id.js" crossorigin="anonymous"></script>
+    
+
 </body>
 </html>
