--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -4,47 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FuseCom</title>
-    <link rel="stylesheet" href="/fuseweb/css/aboutus.css">
+    <link rel="stylesheet" href="../css/aboutus.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <!---boxicons link--->
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+        <!---boxicons link--->
+    <link rel="stylesheet"
+  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+
     <!---remixicons link--->
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"/>
 </head>
 <body>
-    <img class="image-gradient" src="/fuseweb/public/img/f1wp1.png" alt="gradient">
+    <img class="image-gradient" src="../public/img/f1wp1.png" alt="gradient">
     <div class="layer-blur"></div>
 
     <div class="container">
         <header>
-            <a href="/fuseweb/index.html">
-                <img data-aos="fade-down" data-aos-duration="1500" src="/fuseweb/public/img/logofusenew.png" alt="logo" class="logo">
+            <a href="../">
+            <img data-aos="fade-down" data-aos-duration="1500" src="../public/img/logofusenew.png" alt="logo" class="logo" >
             </a>
         </header>
 
         <a data-aos="fade-right" data-aos-duration="1500" href="/fuseweb/index.html" class="back-button">← Anasayfa</a>
 
         <main>
-            <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0" data-aos-duration="1500" class="about">
+            <div data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="0" data-aos-duration="1500"
+            class="about">
                 <div class="title">
-                    <img src="/fuseweb/public/img/furkancavuspp.png" alt="profile">
+                    <img src="../public/img/furkancavuspp.png" alt="profile">
                     <h4>FURKAN ÇAVUŞ</h4>
                     <p>"BURAYA FURKAN ÇAVUŞ HAKKINDA KISA BİR BİLGİLENDİRME PARAGRAFI OLUCAK"</p>
                 </div>
 
                 <div class="title">
-                    <img src="/fuseweb/public/img/emirhanerbatukpp.png" alt="profile">
+                    <img src="../public/img/emirhanerbatukpp.png" alt="profile">
                     <h4>EMİRHAN ERBATUK</h4>
                     <p>"BURAYA EMİRHAN HAKKINDA KISA BİR BİLGİLENDİRME PARAGRAFI OLUCAK"</p>
                 </div>
 
                 <div class="title">
-                    <img src="/fuseweb/public/img/anilsanpp.png" alt="profile">
+                    <img src="../public/img/anilsanpp.png" alt="profile">
                     <h4>ANIL ŞAN</h4>
                     <p>"BURAYA ANIL ŞAN HAKKINDA KISA VİR BİLGİLENDİRME PARAGRAFI OLUCAK"</p>
                 </div>
             </div>
         </main>
+
 
         <footer>
             <div class="footer-container">
@@ -64,5 +73,7 @@
     AOS.init();
     </script>
     <script src="https://kit.fontawesome.com/your_kit_id.js" crossorigin="anonymous"></script>
+    
+
 </body>
 </html>
