--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -26,7 +26,7 @@
             </a>
         </header>
 
-        <a data-aos="fade-right" data-aos-duration="1500" href="../index.html" class="back-button">← Anasayfa</a>
+        <a data-aos="fade-right" data-aos-duration="1500" href="../" class="back-button">← Anasayfa</a>
 
         <main>
             <div data-aos="fade-zoom-in"
